# mvp-sqlx-crud

./: .env  Cargo.toml  README.md  mostro.db  mostro.db-shm  mostro.db-wal
migrations/: 20230928145545_testdisputes.sql
src/: main.rs
